koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
/* ... */
#logo {
    background: transparent url("../img/koha-logo-medium.png") no-repeat scroll 0%;
    margin: .75em .3em .75em .7em;

    a {
        border: 0;
        cursor: pointer;
        display: block;
        height: 0 !important;
        margin: 0;
        overflow: hidden;
        padding: 44px 0 0;
        text-decoration: none;
        width: 180px;
    }
}

#closewindow {
    margin-top: 2em;
    text-align: center;

    a {
        font-weight: bold;
    }
}

.barcode {
    font-size: 200%;
    vertical-align: middle;
}

li {
    &.email {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

.patronbriefinfo {
    li {
        &.email {
            font-size: 87%;
            padding: 0 10px 0 0;
            width: 90%;
        }
    }
}

.empty {
    color: #CCC;
}

.address {
    font-size: 110%;

    li {
        list-style-type: none;
    }
}

.title {
    font-weight: bold;
}

.hold {
    float: right;
    font-size: 90%;
    margin: 0;
}

.thumbnail {
    display: block;
    margin: auto;
}

.thumbnails {
    li {
        display: inline-block;
        list-style-type: none;
        margin: 4px;
    }

    .remove {
        border-top: 1px solid #EEE;
        display: block;
        font-size: 90%;
        margin: 4px -4px 2px -4px;
        padding-top: .5em;
        text-align: center;
    }

    & + p {
        border-top: 1px solid #eee;
        margin-top: 1em;
        padding-top: 1em;
    }
}

#searchresults {
    ul {
        li {
            clear: left;
            font-size: 90%;
            list-style: url("../img/item-bullet.gif");
            padding: .2em 0;

            img {
                float: left;
                margin: 3px 5px 3px -5px;
            }
        }
    }

    span {
        &.status {
            clear: left;
            color: #900;
            display: block;
        }

        &.unavailable {
            clear: left;
            display: block;
        }
    }

    table {
        td {
            vertical-align: top;
        }
    }

    &.unavailability {
        strong {
            display: block;
        }
    }
}

#searchresults {
    .address {
        ul {
            margin: 0;
            padding-left: 0;
            li {
                clear: none;
                float: left;
                list-style: none;
                margin-left: 1ch;
                padding: 0;
            }
        }
    }
}

.searchheader {
    background-color: #E6F0F2;
    border: 1px solid #B9D8D9;
    border-radius: 5px 5px 0 0;
    font-size: 80%;
    margin: 0 0 .5em -1px;
    padding: .4em 0 .4em 1em;

    &.floating {
        border-radius: 0;
        margin-top: 0;
    }

    .btn-group {
        > .btn {
            &:first-child {
                margin-left: .7em;
            }
        }
    }

    form {
        float: right;
        padding: 5px 5px 3px 0;

        &.fz3950 {
            float: right;
            font-size: 125%;
            padding: 0 0 0 5em;
        }

        &.fz3950bigrpad {
            float: right;
            font-size: 125%;
            padding: 5px 25em 0 0;
        }
    }
}

#search-facets {
    border: 1px solid #B9D8D9;
    border-radius: 5px 5px 0 0;

    h4 {
        background-color: #E6F0F2;
        border-bottom: 1px solid #B9D8D9;
        border-radius: 5px 5px 0 0;
        font-size: 90%;
        margin: 0;
        padding: .4em .2em;
        text-align: center;
    }

    ul {
        margin: 0;
        padding: .3em;

        li {
            font-weight: bold;
            list-style-type: none;
        }
    }

    li {
        li {
            font-size: 85%;
            font-weight: normal;
            margin-bottom: 2px;
            padding: .1em .2em;
        }

        &.showmore {
            font-weight: bold;
            text-indent: 1em;
        }
    }
}

.facet-count {
    display: inline-block;
}

.bookcoverimg {
    text-align: center;
}

.custom_cover_image {
    img {
        max-width: 140px;
    }
}

#biblio-cover-slider {
    border: 1px solid #b9d8d9;
    border-radius: 3px;
    margin: 5px;
    padding: 10px 5px 5px 5px;
    min-height: 175px;
}

.cover-slides {
    background: #FFF url("[% interface | html %]/[% theme | html %]/img/spinner-small.gif") center center no-repeat;

    .hint {
        font-size: 90%;
        padding: .5em 0;
    }

    a {
        &.nav-active {
            &:link,
            &:visited {
                color: #85ca11;
            }
        }
    }
}

.cover-image {
    display: none;

    img {
        height: auto;
        max-width: 100%;
    }
}

.cover-nav {
    display: inline-block;
    padding: 3px 4px;
}

.searchhighlightblob {
    font-size: 75%;
    font-style: italic;
}

#irregularity_summary {
    vertical-align: top;
}

#CheckAll,
#CheckNone,
#CheckPending {
    font-weight: normal;
    margin: 0 .5em 0 0;
}

.lost,
.dmg,
.wdn {
    color: #990000;
    display: block;
}

.datedue {
    color: #999;
    display: block;
    font-style: italic;
}

.waitinghere,
.credit {
    color: #669900;
}

#mainuserblock {
    border: 1px solid #E8E8E8;
    margin-top: .5em;
    padding: .5em;
}

.labeledmarc-table {
    border: 0;
}

.labeledmarc-label {
    border: 0;
    color: #000000;
    font-size: 11pt;
    font-style: italic;
    padding: 5;
}

.labeledmarc-value {
    border: 0;
    color: #000;
    font-size: 10pt;
    padding: 5;
}
/* ... */

